# Helix

./: .gitignore  README.md  deploy.sh
.github/workflows/: release.yml
backend/: init_poker_db.py  manage.sh  models.py  requirements.txt  run.py  wsgi.py
backend/app/: __init__.py  config.py  extensions.py
backend/app/games/: __init__.py  poker_manager.py
backend/app/routes/: __init__.py  assets.py  auth.py  calendar.py  chat.py  dashboard.py  learning.py  messages.py  photos.py  poker.py  travel.py  travel_ai.py
backend/app/utils/: __init__.py  decorators.py  validators.py
frontend/: .env.example  .gitignore  IMPLEMENTATION.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src/components/: EmojiPicker.tsx  WeekView.tsx
frontend/src/components/common/: ProtectedRoute.tsx
frontend/src/components/layout/: AppShell.tsx  BaseLayout.tsx  Sidebar.tsx  TitleBar.tsx
frontend/src/components/ui/: Avatar.tsx  Button.tsx  Card.tsx  Input.tsx  PageContent.tsx  index.ts
frontend/src/hooks/: useTauri.ts
frontend/src/pages/: Assets.tsx  Calendar.tsx  Chat.tsx  Dashboard.tsx  Learning.tsx  Login.tsx  Photos.tsx  Poker.tsx  PokerGame.tsx  Settings.tsx  Travel.tsx
frontend/src/services/: api.ts  notificationService.ts
frontend/src/stores/: authStore.ts  themeStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: cityGrouping.ts
(+3 files in other folders)
